2009-05-12 Nicolas Roard <nicolas@roard.com>
        Add some comments in the Controller
	Small modif in the gorm file to better center

2009-01-31 Nicolas Roard <nicolas@roard.com>
	Fix some saving issues -- you can now edit and save files.
	* Use a pretty-printed AST for the output file, but build
	  the AST from the ModelClass -representation
	* Fixed some compilation warnings
	* Added a mainWindow outlet
	* Switched to 12pt default size font

2009-01-31 Nicolas Roard <nicolas@roard.com>
	Fix a representation issue with return values (double dots).

2009-01-31 Nicolas Roard <nicolas@roard.com>
	Allow loading of files using NSOpenPanel...

2009-01-31 Nicolas Roard <nicolas@roard.com>
	Add NSSavePanel call to export a file containing all the classes.

2009-01-31 Nicolas Roard <nicolas@roard.com>
	Use the AST to write the exported file.
	* Fix PrettyPrintCategories when pretty-printing the class directly
	* Add an ASTReplace class to easily replace AST nodes...

2009-01-29 Nicolas Roard <nicolas@roard.com>
	Store the AST in ModelClass and ModelMethod.

2009-01-24 Nicolas Roard <nicolas@roard.com>
	Use pretty print in the text editor while editing...
	* build an AST from the text
	* call the pretty-printer on the AST
	* fix the pretty-print of the comments (don't add a dot)
	* removed the automatic compilation for now

2009-01-19 Nicolas Roard <nicolas@roard.com>
	Improve syntax highlighting
	* add new 'token' methods in PrettyPrinterWriter
	* add category on LKCompare in PrettyPrinterCategories

2009-01-19 Nicolas Roard <nicolas@roard.com>
	Revert changes from r4269 (LKMessageSend prettyprint method in objc)

2009-01-19 Nicolas Roard <nicolas@roard.com>
	Make CodeMonkey work with the new LK organisation (without SmalltalkKit)
	* wrote a loading function in main.m
	* modified files to remove SmalltalkKit includes
	* remove use of SmalltalkCompiler

2009-01-18 Nicolas Roard <nicolas@roard.com>
 	Refactoring...